k8s/hotrod-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotrod
  namespace: jaeger
  labels:
    app: hotrod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotrod
  template:
    metadata:
      labels:
        app: hotrod
    spec:
      containers:
      - name: hotrod
        image: jaegertracing/example-hotrod:latest
        ports:
        - containerPort: 8080
