k8s/hotrod-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hotrod
  name: hotrod
spec:
  containers:
  - args:
    - all
    image: jaegertracing/example-hotrod:latest
    name: hotrod
    ports:
    - containerPort: 8080
    - containerPort: 8081
    - containerPort: 8082
    - containerPort: 8083
