k8s/kibana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: jaeger
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana-logging
        image: docker.elastic.co/kibana/kibana:6.8.3
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
