k8s/kibana-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  containers:
  - image: docker.elastic.co/kibana/kibana:6.8.3
    name: kibana
    ports:
    - containerPort: 5601
