k8s/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
spec:
  type: NodePort
  ports:
  - port: 9200
    name: 
    targetPort: 9200
  selector:
    app: elasticsearch
