k8s/hotrod-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hotrod
  name: hotrod
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8081"
    port: 8081
    targetPort: 8081
  - name: "8082"
    port: 8082
    targetPort: 8082
  - name: "8083"
    port: 8083
    targetPort: 8083
  selector:
    app: hotrod
status:
  loadBalancer: {}
