k8s/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: jaeger
spec:
  ports:
  - name: "6831"
    port: 6831
    targetPort: 6831
  - name: "16686"
    port: 16686
    targetPort: 16686
  selector:
    app: jaeger
status:
  loadBalancer: {}
