k8s/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  type: NodePort
  ports:
  - name: http
    port: 5601
    targetPort: 5601
  selector:
    app: kibana
